k8s/analytics-cronjob.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-analytics
  namespace: mobility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-analytics
  template:
    metadata:
      labels:
        app: mongo-analytics
    spec:
      containers:
        - name: mongo
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-analytics-storage
              mountPath: /data/db
      volumes:
        - name: mongo-analytics-storage
          persistentVolumeClaim:
            claimName: mongo-analytics-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-analytics
  namespace: mobility
spec:
  selector:
    app: mongo-analytics
  ports:
    - port: 27017
      targetPort: 27017
