k8s/customer-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: mobility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: ghcr.io/kektri/cloudcomputing/customer-service:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: mobility
spec:
  selector:
    app: customer-service
  ports:
    - port: 80
      targetPort: 8000
