k8s/mongo-shared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: mobility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7.0
          args: ["--wiredTigerCacheSizeGB", "0.25"]
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "300Mi"
            requests:
              memory: "150Mi"
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mobility
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
